Cynthia: setup definitions still unclear and could use a figure

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -12,6 +12,7 @@
 \usepackage{todonotes}
 \usepackage{subfig}
 \usepackage{dsfont}
+\usepackage{listings}
 
 \usepackage{tikz}
 \usetikzlibrary{arrows}
