--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -7,6 +7,10 @@
 \def\ie{{\it i.e.},~}
 \def\eg{{\it e.g.},~}
 \def\etal{{\it et al.}~}
+\def\bif{\bf if~}
+\def\belif{{\bf else if~}}
+\def\bthen{{\bf then~}}
+\def\belse{{\bf else~}}
 
 \def\E{\mathbb{E}}
 \def\P{\mathbb{P}}
