--- a/paper/content.tex
+++ b/paper/content.tex
@@ -85,7 +85,7 @@ we say that~$\Prefix$ starts with~$\Prefix^k$.
 %
 We also say that an antecedent list~$\Prefix$ contains another
 antecedent list~$\Prefix'$ if the antecedents in~$\Prefix'$ correspond to
-a contiguous subsequence of antecedents in~$\Prefix$.
+a contiguous subsequence of antecedents anywhere in~$\Prefix$.
 
 A rule list~$\RL$ classifies datum~$x_n$ by providing the label prediction~$q_k$
 of the first rule~$r_k$ whose antecedent~$p_k$ is true for~$x_n$.
@@ -301,8 +301,10 @@ then by~\eqref{eq:prefix-lb}, we needn't consider \emph{any} prefix~$\Prefix'$
 that starts with~$\Prefix$, because ${b(\Prefix', \x, \y) \ge b(\Prefix, \x, \y)}$.
 %
 In fact, we can further generalize this result:
-we can hierarchically prune any prefix~$\Prefix''$ that contains
-a contiguous subsequence of antecedents equal to~$\Prefix$,
+we can hierarchically prune any prefix~$\Prefix''$ that
+contains~$\Prefix$, \ie if the antecedents in~$\Prefix$
+correspond to a contiguous subsequents of antecedents
+anywhere in~$\Prefix''$,
 since ${b(\Prefix'', \x, \y) \ge b(\Prefix, \x, \y) \ge \CurrentObj}$.
 
 \subsection{Incremental branch-and-bound computation}
