Cynthia: subsets not permutations

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -969,7 +969,7 @@ gives an upper bound on the length of any optimal rule list.
 The algorithm begins by evaluating the empty prefix,
 followed by~$M$ prefixes of length~${k=1}$,
 then~${P(M, 2)}$ prefixes of length~${k=2}$,
-where~${P(M, k)}$ denotes the number of $k$-permutations of~$M$.
+where~${P(M, 2)}$ is the number of size-2 subsets of~$\{1, \dots, \M\}$.
 %
 Before proceeding to length~${k=3}$, we keep only~${C(M, 2)}$
 prefixes of length~${k=2}$, where~${C(M, k)}$ denotes the
