Cynthia: set of data not captured, not don't capture

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -841,7 +841,8 @@ the same antecedents, they both capture the same data,
 \begin{align}
 \{x_n : \Cap(x_n, \Prefix)\} = \{x_n : \Cap(x_n, \PrefixB)\}.
 \end{align}
-Equivalently, they don't capture the same data,
+Equivalently, the set of data that is not captured by~$\Prefix$
+is the same as the set of data that is not captured by~$\PrefixB$,
 and thus the corresponding rule lists~$\RL$ and~$\RLB$
 share the same default rule ${\Default = \DefaultB}$,
 yielding the same misclassification error:
