Cynthia: selection and permutation of k, not k-permutation

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -565,7 +565,8 @@ ${K \equiv \lfloor 1 / 2 \Reg \rfloor}$
 gives an upper bound on the length of any optimal rule list.
 %
 Since we can think of our problem as finding the optimal
-$k$-permutation of the~$M$ rules, over all~${k \le K}$,
+selection and permutation of~$k$ out of~$M$ rules,
+over all~${k \le K}$,
 \begin{align}
 \TotalRemaining(\RuleSet) \le 1 + \sum_{k=1}^K P(M, k)
 = \sum_{k=0}^K \frac{M!}{(M - k)!}.
