--- a/paper/content.tex
+++ b/paper/content.tex
@@ -586,9 +586,9 @@ during execution.
 Let~$\CurrentObj$ be the current best objective, let~$\Queue$ be the queue,
 and let~$L(\Prefix)$ be the length of prefix~$\Prefix$.
 %
-Let~$n_j$ be the number of prefixes of length~$j$ in~$\Queue$,
+Let~$\Queue_j$ be the number of prefixes of length~$j$ in~$\Queue$,
 \begin{align}
-n_j = \big | \{ \Prefix : L(\Prefix) = j, \Prefix \in \Queue \} \big |
+Queue_j = \big | \{ \Prefix : L(\Prefix) = j, \Prefix \in \Queue \} \big |
 \end{align}
 and let~${J = \argmax_{\Prefix \in \Queue} L(\Prefix)}$
 be the length of the longest prefix in~$\Queue$.
@@ -597,7 +597,7 @@ Define~${\Remaining(\CurrentObj, \Queue)}$ to be the number of remaining
 prefix evaluations, then
 \begin{align}
 \Remaining(\CurrentObj, \Queue)
-\le \sum_{j=1}^J n_j \left( \sum_{k=0}^{K-j} \frac{(M-j)!}{(M-j - k)!} \right),
+\le \sum_{j=1}^J \Queue_j \left( \sum_{k=0}^{K-j} \frac{(M-j)!}{(M-j - k)!} \right),
 \end{align}
 where~${K = \lfloor \CurrentObj / \Reg \rfloor}$.
 \end{corollary}
@@ -620,8 +620,8 @@ where~${P(T, k)}$ denotes the number of $k$-permutations of~$T$.
 This gives an upper bound on the number of remaining prefix evaluations:
 \begin{align}
 \Remaining(\CurrentObj, \Queue)
-\le \sum_{j=0}^J n_j \left( \sum_{k=0}^{K-j} P(M-j, k) \right)
-= \sum_{j=0}^J n_j \left( \sum_{k=0}^{K-j} \frac{(M-j)!}{(M-j - k)!} \right).
+\le \sum_{j=0}^J \Queue_j \left( \sum_{k=0}^{K-j} P(M-j, k) \right)
+= \sum_{j=0}^J \Queue_j \left( \sum_{k=0}^{K-j} \frac{(M-j)!}{(M-j - k)!} \right).
 \end{align}
 \end{proof}
 
