Cynthia: fine-grained not finely

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -625,7 +625,7 @@ This gives an upper bound on the number of remaining prefix evaluations:
 \end{align}
 \end{proof}
 
-We can use more finely grained information about prefixes in the queue
+We can use more fine-grained information about prefixes in the queue
 to obtain a tighter upper bound on the number of remaining prefix evaluations.
 
 \begin{corollary}[Fine-grain upper bound on the number of remaining prefix evaluations]
