--- a/paper/content.tex
+++ b/paper/content.tex
@@ -573,10 +573,19 @@ over all~${k \le K}$,
 \end{align}
 \end{proof}
 
-Our next upper bound on the number of prefix evaluations is
-strictly tighter than the bound in Corollary 2, because it
-uses the current best objective to constrain the lengths of
-all prefixes in the remaining search space.
+In the following two corollaries, we use information about
+the state of Algorithm~\ref{alg:branch-and-bound}'s execution
+to calculate, for any given algorithm state,
+upper bounds on the number of prefix evaluations that might
+be required during the remaining course of algorithm execution.
+%
+This number of remaining evaluations is equal to the number of
+prefixes that are currently in or will be inserted into the queue.
+%
+Our next upper bound is strictly tighter than the bound in
+Corollary~\ref{thm:ub-total-eval}, because it uses the current
+best objective and information about prefixes in the queue to
+constrain the lengths of all prefixes in the remaining search space.
 
 \begin{corollary}[Upper bound on the number of remaining prefix evaluations]
 Consider a state space of all rule lists formed from a set of~$M$ rules,
@@ -588,7 +597,7 @@ and let~$L(\Prefix)$ be the length of prefix~$\Prefix$.
 %
 Let~$\Queue_j$ be the number of prefixes of length~$j$ in~$\Queue$,
 \begin{align}
-Queue_j = \big | \{ \Prefix : L(\Prefix) = j, \Prefix \in \Queue \} \big |
+\Queue_j = \big | \{ \Prefix : L(\Prefix) = j, \Prefix \in \Queue \} \big |
 \end{align}
 and let~${J = \argmax_{\Prefix \in \Queue} L(\Prefix)}$
 be the length of the longest prefix in~$\Queue$.
@@ -603,7 +612,10 @@ where~${K = \lfloor \CurrentObj / \Reg \rfloor}$.
 \end{corollary}
 
 \begin{proof}
-For any prefix~$\Prefix$ remaining to be evaluated,
+The number of remaining prefix evaluations is equal to the number of
+prefixes that are currently in or will be inserted into queue~$\Queue$.
+%
+For any such remaining prefix~$\Prefix$,
 Theorem~\ref{thm:ub-prefix-length} gives an upper bound on its length,
 ${L(\Prefix) \le \lfloor \CurrentObj / \Reg \rfloor}$.
 %
