Comment out generalizer hierarchical bound -- not correct!
If this statement were true, our algorithm could be much more
aggressive.  E.g., if a rule list containing a single R had
lower bound greater than the current best objective, then we
would never add R to a rule list.  This is not correct.

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -13,6 +13,7 @@
 \usepackage{subfig}
 \usepackage{dsfont}
 \usepackage{listings}
+\usepackage{comment}
 
 \usepackage{tikz}
 \usetikzlibrary{arrows}
